--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -14,17 +14,19 @@
                 <li class="nav-item">
                     <a routerLink="/messages" routerLinkActive="active" class="nav-link">Messages</a>
                 </li>
-                <li class="nav-item">
-                    <a routerLink="/errors" routerLinkActive="active" class="nav-link">Errors</a>
-                </li>
             }
+            <li class="nav-item">
+                <a routerLink="/errors" routerLinkActive="active" class="nav-link">Errors</a>
+            </li>
         </ul>
 
         @if (accountService.currentUser()) {
         <div dropdown class="dropdown">
-            <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">Welcome {{accountService.currentUser()?.username | titlecase }}</a>
+            <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">
+                Welcome {{accountService.currentUser()?.username | titlecase}}
+            </a>
             <div *dropdownMenu class="dropdown-menu">
-                <a class="dropdown-item">Edit profile</a>
+                <a routerLink="/member/edit" class="dropdown-item">Edit profile</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" (click)="logout()">Logout</a>
             </div>
@@ -36,10 +38,8 @@
             <input name="username" [(ngModel)]="model.username" class="form-control me-2" placeholder="Username">
             <input name="password" [(ngModel)]="model.password" class="form-control me-2" placeholder="Password"
                 type="password">
-            <button class="btn btn-dark" type="submit">Login</button>
+            <button class="btn btn-success" type="submit">Login</button>
         </form>
         }
-
-
     </div>
 </nav>
